# skim

./: .editorconfig  .env.example  .flake8  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GOAL.md  LICENSE  README.ko.md  README.md  TODO.md  biome.json  daily_feed.py  justfile  main.py  package.json  pnpm-lock.yaml  progress.tsv  pyproject.toml  turbo.json
.agents/skills/skim/: SKILL.md
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
apps/: AGENTS.md
apps/desktop/: AGENTS.md  Package.swift  README.md  package.json
apps/desktop/Sources/SkimDesktopApp/: ContentView.swift  PreviewPane.swift  SkimDesktopApp.swift
apps/desktop/Sources/SkimDesktopCore/: ContentPreview.swift  (+3 more)
apps/desktop/src/: AGENTS.md  App.css  App.tsx
apps/desktop/src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
apps/swift-desktop/: Package.resolved  Package.swift  README.md
desktop/: README.md  package.json  pnpm-lock.yaml
desktop/src/: App.tsx
desktop/src-tauri/: tauri.conf.json
desktop/src-tauri/src/: lib.rs
desktop/src/components/: CredentialsPanel.tsx  ExplorerPanel.tsx
docs/: AGENTS.md  DESIGN.md  THREADS.md  TODO.ko.md  TODO.md
docs/plans/skim-plugin/: 00-overview.md  00a-phase-0-prerequisites.md  01-phase-1-research-cli.md  02-phase-2-auto-refresh.md  03-phase-3-plugin-structure.md  04-phase-4-distribution.md
docs/proof/: swift-desktop-baseline.md  swift-desktop-feed-dashboard.md
docs/superpowers/specs/: 2026-04-08-desktop-gui-design.md  2026-04-08-monorepo-redesign-design.md
prompts/: 2026-03-23.json  2026-03-24.json  2026-07-04.json  AGENTS.md
scripts/: AGENTS.md  build-app.sh  desktop-e2e.sh  import_feed_config.py  normalize_existing_timestamps.py  run_daily_feed.sh
src/: db.py  enrichment.py  models.py  print.py
src/crawlers/: __init__.py  base.py  cdp_auth.py  geeknews.py  hackernews.py  linkedin.py  reddit.py  threads_api.py  x_api.py
src/crawlers/api/: __init__.py  linkedin.py  reddit.py  threads.py  x.py
src/crawlers/auth/: cdp.py
src/crawlers/browser/: __init__.py  base.py  reddit.py
src/crawlers/feed/: arxiv.py  everyto.py  geeknews.py  hackernews.py  huggingface.py  producthunt.py  youtube.py
src/exporters/: sheets_exporter.py
tests/: AGENTS.md  test_ailabs_enrichment_retry.py  test_canonical_body_migration.py  test_cdp_autofill.py  test_cli_help.py  test_crawler_timestamp_iso8601.py  test_enrichment_quality.py  test_hackernews_discussion.py  test_main_crawl_persistence.py  test_ops_cli.py  test_papers_abstract_fallback.py  test_producthunt_redirect.py  test_reddit_api.py  test_registry_platform_names.py  test_research_cli.py  test_research_migration.py  test_research_refresh.py  test_research_runs_store.py  test_research_search.py  test_run_tracking.py  test_social_api_metadata.py  test_timestamp_migration.py  test_timestamp_normalization.py  test_word_count_normalization.py  test_youtube_identity.py
tooling/: AGENTS.md
tooling/scripts/: AGENTS.md  google_apps_script_sample.js  import_feed_config.py  normalize_existing_timestamps.py  run_daily_feed.sh  srt_to_txt.sh
(+24 files in other folders)
