[project]
name = "crawl-sns"
version = "0.1.0"
description = "SNS 플랫폼(Threads, LinkedIn, X, Reddit) 크롤링 도구"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aiden Ahn", email = "senugw0u@gmail.com"}
]
keywords = ["sns", "crawler", "social-media", "threads", "linkedin", "twitter", "reddit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "feedparser>=6.0.12",
    "beautifulsoup4>=4.14.3",
    "twitter-api-client>=0.10.22",
    "websocket-client>=1.9.0",
]

[project.scripts]
crawl-sns = "main:app"

[project.urls]
Homepage = "https://github.com/your-org/crawl-sns"
Repository = "https://github.com/your-org/crawl-sns"
Issues = "https://github.com/your-org/crawl-sns/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
target-version = ['py313']
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''
preview = true

[tool.isort]
py_version = 313
line_length = 100
atomic = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = []
known_third_party = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
pythonpath = ["."]
