[project]
name = "skim-workspace"
version = "0.2.0"
description = "Skim monorepo workspace"
requires-python = ">=3.12"
dependencies = ["skim-cli"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "isort>=6.0.1",
    "pylint>=3.3.4",
    "pytest>=8.3.5",
]

[tool.uv]
package = false

[tool.uv.sources]
skim-cli = { workspace = true }
skim-core = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.black]
target-version = ["py312"]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
)/
'''
preview = true

[tool.isort]
py_version = 312
line_length = 100
atomic = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["skim_cli", "skim_core"]
known_third_party = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
pythonpath = ["packages/skim-core/src", "packages/skim-cli/src"]
